# fm_pdr

./: .clang-format  CMakeLists.txt  Doxyfile  README.md  mag_data.service  make.sh  pdr_test.service
.cache/clangd/index/: Biquad.h.73AFF65657E552E9.idx  Biquad.h.83B60E934A1CC4BE.idx  Butterworth.h.3675104A8DED4592.idx  Butterworth.h.7D18FC60CED38369.idx  Cascade.h.0EDE0F2A4D24ACA2.idx  Cascade.h.7155F6CD8F3454AF.idx  ChebyshevI.h.A60E0D21A10E14FC.idx  ChebyshevII.h.6E8BF892ED5CA6FA.idx  Common.h.8014BBFAA2B4B5FB.idx  Common.h.B401D9578B569324.idx  Custom.h.3BECB88BBDFDC325.idx  Design.h.F505FBE6B7BD218B.idx  Filter.h.6296ADB3F4527361.idx  Fusion.h.CECE6C26FF40ED79.idx  FusionAhrs.c.D02A3167DF3BE9DC.idx  FusionAhrs.h.A7C3041AF250774E.idx  FusionAxes.h.1FB7DC53D45005F6.idx  FusionCalibration.h.4BB4B4C5D8924733.idx  FusionCompass.c.5BB4CA5DB04370C1.idx  FusionCompass.h.73BD4917765011F0.idx  FusionConvention.h.A65B486BB37A2892.idx  FusionMath.h.82390078F0EC0921.idx  FusionOffset.c.599F13724D3B0451.idx  FusionOffset.h.DDFE83215D3EE6B5.idx  Iir.h.6953FA596CBF486D.idx  Layout.h.552D276778313065.idx  Layout.h.5DED4DD11B8697AC.idx  MathSupplement.h.C125F58D09B29A72.idx  MathSupplement.h.F089157A89897A6F.idx  Params.h.028E2FBD3F00F662.idx  PoleFilter.h.223E60949418F463.idx  PoleFilter.h.6CC7D09FD0C37A1B.idx  RBJ.h.6C0BAB078553717E.idx  State.h.52F1BC8F607148BF.idx  State.h.EC44F77C745B9E50.idx  Types.h.08DAEE3A3FD242DE.idx  Types.h.10949ABB6F8B7A75.idx  biquad.h.FC6F5A0396751873.idx  data_buffer.cpp.C30CAB3D57AAC9A5.idx  data_buffer_loader.cpp.AE9DB2E6E5A4EE93.idx  (+23 more)
backup/calib_data/: Accelerometer.csv  Gyroscope.csv  Magnetometer.csv  mag_calibration.csv
conf/: config.json
device/MMC5603NJ/: fm_mmc5603nj.cpp  fm_mmc5603nj.h
device/MMC56x3/: MMC56x3.cpp
device/TDK40607P/imu/: inv_imu.h  inv_imu_apex.h  inv_imu_regmap_rev_a.h  inv_imu_selftest.h  inv_imu_transport.h
example/: CMakeLists.txt  main.cpp
example/mag_calib/: CMakeLists.txt  mag_calib.cpp
example/mag_calib2/: CMakeLists.txt  mag_calib2.cpp
example/mag_calib3/: CMakeLists.txt  mag_calib3.cpp  magnetometer.csv
example/mag_calib4/: CMakeLists.txt  mag_calib4.cpp
example/plain_c/: CMakeLists.txt  main.c
example/test_data/sensor_data/: Accelerometer.csv  Gyroscope.csv  Linear Accelerometer.csv  Location.csv  Magnetometer.csv
example/test_data/test_case0/: Barometer.csv  Gyroscope.csv  Linear Accelerometer.csv  Magnetometer.csv
example/test_data/test_case1/: Accelerometer.csv  Location.csv  Location_input.csv  Location_output.csv
example/test_data/test_case1/meta/: time.csv
example/test_data/test_case2/: Accelerometer.csv  Linear Acceleration.csv  Location_output.csv  draw.py
example/test_data/test_case2/meta/: time.csv
example/test_data/test_case3/: Accelerometer.csv  Magnetometer.csv
example/test_data/test_case3/meta/: device.csv  time.csv
example/test_data/test_case4/: Accelerometer.csv  Gyroscope.csv  Location.csv  Location_input.csv  draw.py  preprocessed.csv
example/test_data/test_case4/meta/: time.csv
example/test_data/train_data/: Accelerometer.csv  Gyroscope.csv  Linear Accelerometer.csv  Location.csv  Magnetometer.csv
include/: data_buffer_loader.h  data_file_loader.h  data_loader.h  data_manager.h  device_wrapper.h  direction_predictor.h  fm_pdr.h  merge_direction_step.h  pdr.h  step_predictor.h
include/DSP-Cpp-filters/: so_butterworth_lpf.h
src/: CMakeLists.txt  data_buffer_loader.cpp  data_file_loader.cpp  data_file_loader.h  data_loader.cpp  data_manager.cpp  device_wrapper.cpp  device_wrapper.cpp.bak  device_wrapper.h  direction_predictor.cpp  direction_predictor.h  exception.h  fm_device_wrapper.cpp  fm_device_wrapper.h  fm_pdr.cpp  fm_pdr.h  json_operator.h  magnetometer-calibration.cpp  main.cpp  merge_direction_step.cpp  merge_direction_step.h  pdr.cpp  pdr.h  realtime_mag_calibration.h  step_predictor.cpp  step_predictor.h
src/calibration/: SensorDataExtra.h  SixParametersCorrector.h  SoftAndHardIronCalibration.cpp  SoftAndHardIronCalibration.h  magnetometer-calibration.h  realtime_mag_calibration.h
src/conf/: config.json  mag_calibration.csv  mag_calibration.json
src/device/MMC56x3/: MMC56x3.h
src/device/TDK40607P/: ICM42670P.cpp  ICM42670P.h  inv_time.c
src/device/TDK40607P/Invn/: InvError.h  InvExport.h
src/device/TDK40607P/imu/: inv_imu_apex.c  inv_imu_defs.h  inv_imu_driver.c  inv_imu_driver.h  inv_imu_extfunc.h  inv_imu_selftest.c  inv_imu_transport.c  inv_imu_version.h
test_case0/: Accelerometer.csv  draw.py
test_case1/: Gyroscope.csv  Linear Acceleration.csv  Magnetometer.csv
test_case2/: Gyroscope.csv  Location.csv  Location_input.csv  Magnetometer.csv
test_case3/: Gyroscope.csv  Linear Acceleration.csv  Location.csv  Location_input.csv  draw.py
test_case4/: Linear Acceleration.csv  Location_output.csv  Magnetometer.csv
