CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(FM-Pedestrian-Dead-Reckoning-PDR)

MESSAGE(STATUS "###Start building ${PROJECT_NAME}###")

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "-Wno-literal-suffix")
SET(VCPKG_PATH "$ENV{VCPKG_ROOT}/installed/x64-linux/include")

OPTION(BUILD_WITH_THIRDPARTY "Build ThirdParty" ON)

IF(BUILD_WITH_THIRDPARTY)
    ADD_SUBDIRECTORY(thirdparty/Fusion-main)
ENDIF()

AUX_SOURCE_DIRECTORY(src DIR_SRCS)

FIND_PATH(RAPIDCSV_INCLUDE_DIRS
            NAMES "rapidcsv.h"
            PATHS ${VCPKG_PATH})
find_package(Eigen3 CONFIG REQUIRED)
find_package (GeographicLib CONFIG REQUIRED)
find_package(RapidJSON CONFIG REQUIRED)

ADD_DEFINITIONS(-D_LINUX)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "debug" OR "${CMAKE_BUILD_TYPE}" STREQUAL "")
    ADD_COMPILE_OPTIONS(-Wall -gdwarf-2 -fstack-protector-all -g)
ELSE()
    ADD_COMPILE_OPTIONS(-O2 -Wall -fstack-protector-all)
ENDIF()

# TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${RAPIDCSV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PROJECT_NAME}
    PRIVATE
    ${RAPIDCSV_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/Fusion-main/Fusion
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${CMAKE_INSTALL_PREFIX}/include
    )

LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX}/lib/
    ${CMAKE_CURRENT_SOURCE_DIR}/lib
    ${CMAKE_CURRENT_BINARY_DIR}/thirdparty/Fusion-main/Fusion
    )

ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS})
# ADD_LIBRARY(${PROJECT_NAME} SHARED ${DIR_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC -Wl,-z,relro,-z,now)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC iir_static dlib openblas Fusion pthread)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC Eigen3::Eigen ${GeographicLib_LIBRARIES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC RapidJSON rapidjson)

SET(RUNTIME_DEST bin)
SET(LIBRARY_DEST lib)
SET(CONFIG_DEST conf)

INSTALL (TARGETS ${PROJECT_NAME}
    RUNTIME DESTINATION ${RUNTIME_DEST}
    LIBRARY DESTINATION ${LIBRARY_DEST}
    ARCHIVE DESTINATION ${LIBRARY_DEST}
    )

INSTALL(FILES conf/config.json DESTINATION ${CONFIG_DEST})
INSTALL(DIRECTORY test_case0/ DESTINATION test_case0 FILES_MATCHING PATTERN "*.csv")
# INSTALL(FILES conf/typetoextractor/typetoextractor.json DESTINATION conf/typetoextractor)
# INSTALL(DIRECTORY include/ DESTINATION include FILES_MATCHING PATTERN "*.h")
