CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(mag_calib2)

MESSAGE(STATUS "###Start building ${PROJECT_NAME}###")

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_FLAGS "-Wno-literal-suffix")

AUX_SOURCE_DIRECTORY(. DIR_SRCS)

ADD_DEFINITIONS(-D_LINUX)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "debug" OR "${CMAKE_BUILD_TYPE}" STREQUAL "")
    ADD_COMPILE_OPTIONS(-Wall -gdwarf-2 -fstack-protector-all -g)
ELSE()
    ADD_COMPILE_OPTIONS(-O2 -Wall -fstack-protector-all)
ENDIF()

INCLUDE_DIRECTORIES(${PROJECT_NAME}
    PRIVATE
    ${CMAKE_INSTALL_PREFIX}/include
    ${CMAKE_INSTALL_PREFIX}/include/FmPDR
    ${CMAKE_INSTALL_PREFIX}/include/eigen3
    )

LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX}/lib/)

ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC -Wl,-z,relro,-z,now)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC FmPDR iir_static dlib openblas Fusion GeographicLib)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC m stdc++)

SET(RUNTIME_DEST bin)
SET(LIBRARY_DEST lib)
SET(CONFIG_DEST conf)

INSTALL (TARGETS ${PROJECT_NAME}
    RUNTIME DESTINATION ${RUNTIME_DEST}
    LIBRARY DESTINATION ${LIBRARY_DEST}
    ARCHIVE DESTINATION ${LIBRARY_DEST}
    )
INSTALL(FILES magnetometer.csv DESTINATION ${RUNTIME_DEST})
# INSTALL(DIRECTORY test_data/ DESTINATION ${RUNTIME_DEST}/test_data FILES_MATCHING PATTERN "*.csv")